tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__AETier2FluidStor-0J3hYoBeTpe_OnXMU9zRDA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 9249917096519586060,
  "prerequisites": [
    1890,
    2477
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This Processor allows you to craft 256k, 1024k, 4096 and 16384k Fluid Storage Components.\n\nThese Components need to be paired with Advanced Fluid Storage Housings to turn them into Fluid Storage Cells.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "AE Tier 2 Fluid Storage",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1890,
    2477
  ],
  "rewards": [],
  "tasks": []
}
