tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__AETier3ItemStora-AAAAAAAAAAAAAAAAAAAJnw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2463,
  "prerequisites": [
    1890,
    1319
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The main processor for 256k and 1024k cells. You can make these in IV.\n\nThese Components need to be paired with Advanced Storage Housings to turn them into Storage Cells.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "AE Tier 3 Item Storage",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1890,
    1319
  ],
  "rewards": [],
  "tasks": []
}
